Fixed input height on mobile

--- a/js/search/_search.scss
+++ b/js/search/_search.scss
@@ -10,6 +10,7 @@
     }
     input {
       width: 80%;
+      line-height: normal;
       max-width: 30em;
       height: 80%;
       max-height: 1.5em;
